--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "assets": "npx @capacitor/assets generate --iconBackgroundColor #ffffff --iconBackgroundColorDark #000000 --splashBackgroundColor #ffffff --splashBackgroundColorDark #000000"
   },
   "private": true,
   "dependencies": {
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@capacitor/android": "^7.1.0",
     "@capacitor/core": "^7.1.0",
+    "@capacitor/ios": "^7.1.0",
     "@ngrx/signals": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.15",
     "daisyui": "^5.0.9",
