--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "android": "npm run build && npx cap sync && npx cap run android",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
